# kraken2

./: CMakeLists.txt
scripts/: k2
src/: CMakeLists.txt  Makefile  build_db.cc  classify.cc  compact_hash.cc  compact_hash.h  dump_table.cc  estimate_capacity.cc  gzstream.h  kraken2_headers.h  lookup_accession_numbers.cc  mmap_file.cc  mmap_file.h  taxonomy.cc  threadpool.h
